--- a/exercícios/ex003/ex003.html
+++ b/exercícios/ex003/ex003.html
@@ -8,7 +8,7 @@
     <link rel="shortcut icon" href="imagens/favicon-32x32.png" type="image/x-icon">
 </head>
 <body>
-    <h1>Testando imagens</h1>
+    <h1>Testando</h1>
     <p>imagem na mesma pasta</p>
     <img src="imagens/logohtml200.png" alt="html">
     <img src="imagens/logocss200.png" alt="html">
