--- a/exercícios/ex001/index.html
+++ b/exercícios/ex001/index.html
@@ -7,7 +7,7 @@
     <title>Revolution</title>
 </head>
 <body>
-    <h1>Hallo, Welt!</h1>
+    <h1>Hallo, Leute!</h1>
     <hr>
     <p>Heute habe ich angefangen, html zu studieren.</p>
     <p>Bom dia, mores!</p>
