--- a/exercícios/PRATICANDO ADEGA/index.html
+++ b/exercícios/PRATICANDO ADEGA/index.html
@@ -39,7 +39,7 @@
         }
 
         a:hover {
-            color: white;
+            color: rgba(255, 255, 255, 0.219);
             background-color: #B21601;
             font-weight: bolder;
         }
