alterei o nav bar
alteirei o primeiro ahref

--- a/exercícios/adega online/adega online.html
+++ b/exercícios/adega online/adega online.html
@@ -16,7 +16,7 @@
             <a href="#" target="_blank">carrinho</a> 
           </div>
           <nav>
-              <a href="#">VINHOssss</a>
+              <a href="#">VINHO</a>
               <a href="#">ACESSÓRIOS</a>
               <a href="#">GOURMET</a>
               <a href="#">BIBLIOTECA</a>
