--- a/exercicios/ex 022/fundo001.html
+++ b/exercicios/ex 022/fundo001.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,8 @@
     <title>Imagem de fundo</title>
 </head>
 <body>
+    <h2>bom dia</h2>
+    <p>oi</p>
     
 </body>
 </html>
