--- a/exercicios/ex 22.2/fundo007.html
+++ b/exercicios/ex 22.2/fundo007.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Revisando fundos</title>
+   
+    <style>
+        div {
+            height: 400px;
+            width: 400px;
+            margin-left: auto;
+            margin-right: auto;
+            border: 1px solid red;
+            padding: 10px;
+            text-align: justify;
+            background-color: black;
+            color: white;
+            border-radius: 20px;
+        }
+
+        body {
+            height: 100vh;
+            background-size: cover;
+            background-image: url('imagens/wallpaper002.jpg');
+            
+        }
+    </style>
+
+
+
 </head>
 <body>
+
+    <div>
+        <h1>HALLO</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure earum expedita et necessitatibus aspernatur cumque doloremque obcaecati ratione possimus architecto. Doloribus veritatis fugit culpa eos aliquid, aliquam fugiat exercitationem? Nobis.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus placeat explicabo provident beatae natus vitae, cumque aliquid voluptate odio, magnam voluptatem ad consequuntur? Beatae nulla nihil labore vitae eligendi quaerat.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore facilis officiis minus sint maiores quisquam dolorem sapiente blanditiis hic, ad, nesciunt molestias aperiam error quam neque nihil cumque quos omnis!</p>
+    </div>
     
 </body>
 </html>
