--- a/exercicios/PRATICANDO ADEGA/index.html
+++ b/exercicios/PRATICANDO ADEGA/index.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="shortcut icon" href="icone.png" type="image/x-icon">
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    
+    <link rel="shortcut icon" href="icone.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <nav>
-            <a href="http://"> <img src="icone.png" alt=""> </a>
-            <a href="http://">VINHOS</a>
-            <a href="http://">PREMIUM</a>
-            <a href="http://">BEST SELLERS</a>
-            <a href="http://">PRODUTORES RENOMADOS</a>
-            <input type="text" placeholder="Buscar vinhos...">
-        </nav>
+      <nav>
+        <a href="http://"> <img src="icone.png" alt="" /> </a>
+        <a href="http://">VINHOS</a>
+        <a href="http://">PREMIUM</a>
+        <a href="http://">BEST SELLERS</a>
+        <a href="http://">PRODUTORES RENOMADOS</a>
+        <input type="text" placeholder="Buscar vinhos..." />
+      </nav>
     </header>
-    
-</body>
+  </body>
 </html>
